--- a/latex/tesi.tex
+++ b/latex/tesi.tex
@@ -205,12 +205,12 @@ url = {stackoverflow.com}
 	\titolo{3DSAT}
 	\sottotitolo{Progettazione e sviluppo di 3D Stereo Acuity Test con algoritmo PEST (Parameter Estimation by Sequential Testing)}     
 	\corsodistudi{Ingegneria Informatica\\Classe N. L-08 - Ingegneria dell’informazione (D.M. 270/04)}
-	\candidato{Samuele FERRI [1045975]}
-	\secondocandidato{Simone SUDATI [1045936]}
-	\relatore{prof.~Angelo GARGANTINI}
-	\secondorelatore{prof.ssa~Silvia BONFANTI}
-	\sedutadilaurea{ANNO~ACCADEMICO 2018-2019}
-	\logosede{images/unibg.png}
+	\candidato{Samuele Ferri}
+	\secondocandidato{Simone Sudati}
+	\relatore{prof.~Angelo Gargantini}
+	\secondorelatore{prof.ssa~Silvia Bonfanti}
+	\sedutadilaurea{a.a. 2018-2019}
+	\logosede{images/unibg.jpg}
 \end{ThesisTitlePage}
 
 % Citazione
